PosixPlatform.cpp should not include sysctl.h

XMLWordPrintable

    • 14
    • b03

        I tried to build jdk/jdk on Fedora 31 x64, but I saw C++ compiler error as below:

        ```
        In file included from /home/ysuenaga/OpenJDK/jdk/src/jdk.incubator.jpackage/unix/native/libapplauncher/PosixPlatform.cpp:36:
        /usr/include/sys/sysctl.h:21:2: error: #warning "The <sys/sysctl.h> header is deprecated and will be removed." [-Werror=cpp]
           21 | #warning "The <sys/sysctl.h> header is deprecated and will be removed."
              |
        ```

        sysctl.h provides `sysctl()` and some macros, but they are not used in PosixPlatform.cpp .

              Assignee:
              Yasumasa Suenaga
              Reporter:
              Yasumasa Suenaga
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: