8235833: PosixPlatform.cpp should not include sysctl.h

Reviewed-by: aph, asemenyuk